--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
 
         <ul class="hidden lg:flex space-x-6 text-2xl">
-            <li class="font-bold"> <a href="#"> Home </a> </li>
-            <li class="font-bold"> <a href="#"> Products </a> </li>
-            <li class="font-bold"> <a href="#"> Specials </a> </li>
-            <li class="bg-[#7A3131] rounded-xl px-2 py-1 font-bold"> <a href="#"> Get Started </a> </li>
+            <li class="font-bold hover:outline outline-offset-4 hover:text-[#269992]"> <a href="#"> Home </a> </li>
+            <li class="font-bold hover:outline outline-offset-4 hover:text-[#269992]"> <a href="#"> Products </a> </li>
+            <li class="font-bold hover:outline outline-offset-4 hover:text-[#269992]"> <a href="#"> Specials </a> </li>
+            <li class="bg-[#7A3131] rounded-xl px-2 py-1 font-bold hover:outline outline-offset-4 hover:bg-yellow-950"> <a href="#"> Get Started </a> </li>
         </ul>
 
     </div>
 
 
     <div class="grid place-items-center space-y-4 py-3 lg:hidden">
-        <h2 class="text-[#269992] text-xl font-bold	w-64 md:text-3xl md:w-96">NEW GENERATION OF MODERN TECHNOLOGY</h2>
+        <h1 class="text-[#269992] text-xl font-bold	w-64 md:text-3xl md:w-96">NEW GENERATION OF MODERN TECHNOLOGY</h1>
         <h2 class="text-[#269992] text-lg font-bold	md:text-2xl">Check what we can offer</h2>
         <a href="#" class="text-white font-bold	bg-[#7A3131] rounded-lg	px-2 py-2 text-lg md:text-2xl">Get Started</a>
         <img class="pt-6 md:hidden" src="images/undraw_visionary_technology.png" width="280">
@@ -42,7 +42,7 @@
             <div>
                 <h1 class="text-[#269992] text-4xl font-bold w-96 py-2">NEW GENERATION OF MODERN TECHNOLOGY</h1>
                 <h2 class="text-[#269992] text-3xl font-bold pb-6">Check what we can offer</h2>
-                <a href="#" class="text-white font-bold	bg-[#7A3131] rounded-lg	px-2 py-2 text-2xl">Get Started</a>
+                <a href="#" class="text-white font-bold	bg-[#7A3131] rounded-lg	px-2 py-2 text-2xl hover:outline outline-offset-4 hover:bg-yellow-950">Get Started</a>
             </div>
             <img src="images/undraw_visionary_technology.png" width="500">
         </div>
@@ -95,57 +95,102 @@
     </div>
 
 
-    <div class="flex justify-center py-4 space-x-6">
+    <div class="lg:hidden">
+        <div class="flex justify-center py-4 space-x-6">
+            <div>
+                <ul>
+                    <li class="text-[#269992] font-bold text-base md:text-2xl"> About us </li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> How it works </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Our Story </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Careers </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Policies </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Terms of Service </a></li>
+                </ul>
+            </div>
+
+
+            <div>
+                <ul>
+                    <li class="text-[#269992] font-bold text-base md:text-2xl">For Business</li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Mission Statement </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Ambassadors </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Agency </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> History </a></li>
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="flex justify-center space-x-6">
+            <div>
+                <ul>
+                    <li class="text-[#269992] font-bold text-base md:text-2xl">Contact us</li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Contact Details </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Support </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> FAQ </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Location </a></li>
+                </ul>
+            </div>
+
+
+            <div>
+                <ul>
+                    <li class="text-[#269992] font-bold text-base md:text-2xl">Social Media</li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> YouTube </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Facebook </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Twitter </a></li>
+                    <li class="font-bold text-sm md:text-xl"> <a href="#"> Instagram </a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="hidden lg:block lg:flex justify-center space-x-16 pt-16">
         <div>
             <ul>
                 <li class="text-[#269992] font-bold text-base md:text-2xl"> About us </li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> How it works </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Our Story </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Careers </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Policies </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Terms of Service </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> How it works </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Our Story </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Careers </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Policies </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Terms of Service </a></li>
             </ul>
         </div>
-
 
         <div>
             <ul>
                 <li class="text-[#269992] font-bold text-base md:text-2xl">For Business</li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Mission Statement </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Ambassadors </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Agency </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> History </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Mission Statement </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Ambassadors </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Agency </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> History </a></li>
             </ul>
         </div>
-    </div>
 
-
-    <div class="flex justify-center space-x-6">
         <div>
             <ul>
                 <li class="text-[#269992] font-bold text-base md:text-2xl">Contact us</li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Contact Details </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Support </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> FAQ </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Location </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Contact Details </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Support </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> FAQ </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Location </a></li>
             </ul>
         </div>
-
 
         <div>
             <ul>
                 <li class="text-[#269992] font-bold text-base md:text-2xl">Social Media</li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> YouTube </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Facebook </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Twitter </a></li>
-                <li class="font-bold text-sm md:text-xl"> <a href="#"> Instagram </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> YouTube </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Facebook </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Twitter </a></li>
+                <li class="font-bold text-sm md:text-xl hover:text-[#269992]"> <a href="#"> Instagram </a></li>
             </ul>
         </div>
     </div>
 
 
-
-    <div class="flex justify-center pt-14 pb-4 text-xs md:text-sm">
+    <div class="flex justify-center pt-24 pb-4 text-xs md:text-sm lg:text-base">
         <p>© 2023 Nexus Techneo. All rights reserved</p>
     </div>
 
